First  portfolio commit

--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,6 +1,6 @@
 /* @import "/simplefolio/node_modules/bootstrap/dist/css/bootstrap.min.css";
  */
-@import "/src/bootstrap/bootstrap.min.css";
+@import "/bootstrap/bootstrap.min.css";
 
 /*
 
